# MIPS32-Emulator

./: .gitignore  CMakeLists.txt  README.md
src/alu/: alu.cpp  alu.hpp
src/cpu/: cpu.cpp  cpu.hpp
src/decoder/: decoder.cpp  decoder.hpp
src/loader/: loader.cpp  loader.hpp
src/memory/: memory.cpp  memory.hpp
src/registers/: registers.cpp  registers.hpp
test/: alu_test.cpp  cpu_test.cpp  decoder_test.cpp  memory_test.cpp  registers_test.cpp
